--- a/styles/style.css
+++ b/styles/style.css
@@ -105,12 +105,13 @@
 
 .body{
     width: 1366px;
-    
-    background-image: url(../images/overlay.svg), url(../images/coffee_image.jpg);
+    margin-left: auto;
+    margin-right: auto;
+    background-image:  url(../images/coffee_image.jpg);
     background-repeat: no-repeat;
     background-attachment: local;
-    background-size: 1366px 785px; 
-    margin: 0px;
+    background-position: center top;
+
 }
 
 .nav{
@@ -157,12 +158,34 @@
     font-family: "PlayfairDisplay", Arial, sans-serif;
     margin-right: 20px;
     cursor: pointer;
-   
+}
+.menu-button:active{
+    background-color: #FFEED8;
+    transform: scale(0.98);
+}
+.main-button{
+    font-weight: 600;
+    font-size: 16px;
 
+    color: #1E1E1E;
+    background-color: #F9C06A;
+
+    border: 1px solid #F9C06A;
+    border-radius: 24px;
+    padding-top: 14px;
+    padding-left: 26px;
+    padding-bottom: 13px;
+    padding-right: 26px;
+    font-family: "PlayfairDisplay", Arial, sans-serif;
+
+    cursor: pointer;
 }
 
-
-.main-button{
+.main-button:active{
+    background-color: #FFEED8;
+    transform: scale(0.98);
+}
+.main-buton{
     font-weight: 600;
     font-size: 16px;
 
@@ -178,6 +201,10 @@
     font-family: "PlayfairDisplay", Arial, sans-serif;
     margin-left: 79px;
     cursor: pointer;
+}
+.main-buton:active{
+    background-color: #FFF9F1;
+    transform: scale(0.98);
 }
 .coffee{
     padding: 90px;
@@ -240,10 +267,11 @@
 
 .stylizedcup{
     
-    margin-top: 97.5px;
+    margin-top: 25px;
     padding-right: 95px;
     float: left;
     padding-bottom: 20px;
+    
 }
 .caca{
     padding-top: 65px;
@@ -263,7 +291,10 @@
     cursor: pointer;
     margin-left: 93px;
 }
-
+.button:active{
+    background-color: #FFF9F1;
+    transform: scale(0.98);
+}
 .blast{
     padding-right: 400px;
 }
@@ -281,7 +312,10 @@
     margin-left: 616px;
     cursor: pointer;
 }
-
+.join-button:active{
+    background-color: #FFF9F1;
+    transform: scale(0.98);
+}
 .blend{ 
     padding-bottom: 15px;
 }
@@ -454,6 +488,10 @@
     margin-top: 16px;
     cursor: pointer;
 }
+.order-button:active{
+    background-color: #FFF9F1;
+    transform: scale(0.98);
+}
 .our{
     font-weight: 700;
     font-size: 54px;
@@ -545,7 +583,7 @@
     background-image: url(../images/Coffee.png);
     background-repeat: no-repeat;
     background-attachment: local;
-    background-size: 1366px 374px;
+    background-size: 1366px 574px;
 }
 .name{
     font-weight: 400;
@@ -586,6 +624,11 @@
     margin-left: 867px;
     cursor: pointer;  
     
+}
+
+.Suscribe-button:active{
+    background-color: #FFF9F1;
+    transform: scale(0.98);
 }
 .sbs{
     margin-top: -66px;
@@ -867,4 +910,355 @@
 .svg{
     justify-content: center;
     margin-top: 24px;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+
+.modal-overlay {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal-content {
+    background-color: #FFF9F1;
+    margin: 10% auto;
+    padding: 40px;
+    border: 1px solid #F9C06A;
+    border-radius: 8px;
+    width: 100%;
+    max-width: 500px;
+    position: relative;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.close-modal {
+    position: absolute;
+    right: 25px;
+    top: 15px;
+    color: #603809;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close-modal:hover {
+    color: #F9C06A;
+}
+
+.modal-content h2 {
+    color: #603809;
+    text-align: center;
+    margin-bottom: 30px;
+    font-family: "PlayfairDisplay", Arial, sans-serif;
+    font-weight: 700;
+    font-size: 32px;
+}
+
+.registration-form .form-group {
+    margin-bottom: 20px;
+}
+
+.registration-form input {
+    width: 100%;
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 16px;
+    font-family: "PlayfairDisplay", Arial, sans-serif;
+    background-color: #FFFFFF;
+}
+
+.registration-form input:focus {
+    border-color: #F9C06A;
+    outline: none;
+}
+
+.register-btn {
+    width: 100%;
+    padding: 15px;
+    background-color: #F9C06A;
+    color: #1E1E1E;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    font-family: "PlayfairDisplay", Arial, sans-serif;
+    margin-top: 10px;
+    transition: background-color 0.3s;
+}
+
+.register-btn:hover {
+    background-color: #E0A95B;
+}
+
+.login-link {
+    text-align: center;
+    margin-top: 20px;
+    color: #603809;
+    font-family: "PlayfairDisplay", Arial, sans-serif;
+}
+
+.login-link a {
+    color: #F9C06A;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.login-link a:hover {
+    text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+    
+    .body {
+        background-color: #ffffff;
+        background-position: top left;
+        
+    }
+
+    .header {
+        flex-direction: column;
+        padding: 20px;
+        align-items: flex-start;
+    }
+
+    .nav {
+        
+        width: 100%;
+        margin-top: 20px;
+    }
+    .getachance{
+        margin-left: 80px;
+    }
+
+    .menu-pup, 
+    .menu-link {
+        padding: 10px 0;
+        margin-right: 0;
+        width: 100%;
+        text-align: center;
+        border-bottom: 1px solid rgba(255,255,255,0.1);
+    }
+
+    .cuppie{
+        margin-top: 50px;
+    }
+    .menu-button {
+        margin: 0px 0 0 0;
+        
+        text-align: center;
+    }
+
+    .svg{
+        text-align: center;
+        padding-bottom: 20px;
+    }
+    
+    .coffee {
+        padding: 40px 20px;
+        text-align: center;
+    }
+    
+    .titlee {
+        font-size: 200px;
+    }
+
+    .Weve,
+    .itis {
+        font-size: 25px;
+        
+    }
+    .Weve,
+    .itis {
+        opacity: 83%;
+        background-color: #553712;
+    }
+    
+    .Discover,
+    .enjoy,
+    .why,
+    .our{
+        font-size: 50px;
+        line-height: 1.2;
+        margin-left: 0;
+        text-align: center;
+    }
+    .Discover{
+        margin-top: -20px;
+    }
+    .Subs{
+        font-size: 36px;
+        line-height: 1.2;
+        margin-left: -270px;
+        text-align: center;
+    }
+
+    .provides,
+    .Explore,
+    .wedont,
+    .great,
+    .news,
+    .weare {
+        font-size: 25px;
+        line-height: 1.4;
+        padding-left: 0;
+        margin-left: 0;
+        text-align: center;
+        padding-right: 0;
+    }
+
+    .caca {
+        width: 1366px;
+        height: 370px;
+        margin-top: -20px;
+        padding-top: -65px;
+        opacity: 100%;
+        background-color: #FFEED8;
+    }
+
+    .muhehe{
+        width: 0px;
+        height: 0px;
+    }
+    .stylizedcup {
+        float: none;
+        padding-right: 0;
+        margin-top: 15px;
+        background-color: #FFEED8;
+    }
+
+    .button,
+    .join-button,
+    .order-button {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+
+    .row,
+    .roaw {
+        flex-direction: row;
+        margin: 20px 20px;
+    }
+
+    .Cappuccino,
+    .ChaiLatte,
+    .Macchiato,
+    .Expresso,
+    .Supremebeans,
+    .HighQuality,
+    .Extraordinary,
+    .Affordableprice {
+        width: 90%;
+        margin-bottom: 20px;
+    }
+
+    .text {
+        width: auto;
+        margin: 20px;
+        height: auto;
+        padding: 20px;
+    }
+
+    .lorem{
+        font-size: 25px;
+    }
+    .lorem,
+    .jonny,
+    .manager {
+        margin-left: 0;
+        text-align: center;
+    }
+
+    .man {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .inputname{
+        
+        text-align: center;
+    }
+    .enteryourname {
+        margin-left: 445px;
+        text-align: center;
+    }
+
+    .mail {
+        width: 55%;
+        text-align: center;
+    }
+
+    .Suscribe-button {
+        margin-left: 365px;
+        margin-top: 20px;
+        width: calc(50% - 40px);
+        margin-top: 70px;
+        
+    }
+
+    .footerer {
+        
+        padding: 60px 45px;
+    }
+
+    .Scene,
+    .ipsum,
+    .a1,
+    .b1,
+    .a2,
+    .b2,
+    .a3,
+    .b3 {
+        margin-right: 0;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    .menu-pup:hover,
+    .menu-link:hover {
+        color: #F9C06A;
+        transform: translateX(5px);
+    }
+
+    .menu-button:hover,
+    .main-button:hover,
+    .main-buton:hover,
+    .button:hover,
+    .join-button:hover,
+    .order-button:hover,
+    .Suscribe-button:hover {
+        background-color: #E0A95B;
+        transform: scale(1.02);
+    }
+
+    .menu-pup,
+    .menu-link,
+    .menu-button,
+    .main-button,
+    .main-buton,
+    .button,
+    .join-button,
+    .order-button,
+    .Suscribe-button {
+        transition: all 0.3s ease;
+    }
+
+    .cap:hover,
+    .exp:hover,
+    .chai:hover,
+    .mac:hover {
+        color: #F9C06A;
+        transition: color 0.3s ease;
+    }
 }
